# authdeez

./: .gitignore  README.md  accounts.example.txt  meson.build
docs/: CNAME  index.html
src/: lib.cpp  lib.hpp  main.cpp
subprojects/: cppcodec.wrap
tests/: encoder.cpp  hmac.cpp  otp.cpp  strings.cpp
